--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <body>
     <div class="main-container">
       <div id="overlay" class="start">
-        <h2 class="title">Phrase Hunter</h2>
-        <h1 id="game-over-message"></h1>
-        <button id="btn__reset">Start Game</button>
+        <div class="overlay-text">
+          <h2 class="title">Phrase Hunter</h2>
+          <h1 id="game-over-message"></h1>
+          <button id="btn__reset">Start Game</button>
+        </div>
       </div>
 
       <div id="banner" class="section">
